--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -124,7 +124,8 @@ Quasi-Periodic (QP) manner, due to active regions on its surface which
 rotate in and out of view.
 Complicated surface spot patterns produce non-sinusoidal variations,
 and the finite lifetimes of these active regions and
-differential rotation on the stellar surface produce quasi-periodicity.
+differential rotation on the stellar surface produce quasi-periodicity
+\citep{Dumusque2011}.
 A strictly periodic sinusoid is therefore not necessarily a good model choice
 for these time-series.
 A physically realistic model of the stellar surface
@@ -150,7 +151,7 @@ peaks in a Lomb-Scargle \citep{Lomb1976, Scargle1982} (LS) periodogram
 \citep{Mcquillan13b} and wavelet transforms \citep{Garcia2014}.
 The precisions of the LS periodogram and wavelet methods are limited by the
 suitability of the model choice: a sinusoid for the LS periodogram,
-and a choice of mother wavelet, assumed to desribe the data
+and a choice of mother wavelet, assumed to describe the data
 over a range of transpositions \citep[see, \eg][]{Carter2010},
 for the wavelet method.
 In contrast, the ACF method is much better suited to signals that are
@@ -227,14 +228,14 @@ KIC \kepexample.
 % I return to this point shortly.
 
 A range of kernel functions can describe stellar variability.
-For example, the simplest and most commonly used kernel function, the `Squared
+For example, the most commonly used kernel function, the `Squared
 Exponential' (SE), defined as follows, could adequately fit the
 KIC \kepexample\ light curve:
 \begin{equation}
 \label{eq:SE}
 k_{i,j} = A \exp \left(-\frac{(x_i - x_j)^2}{2l^2} \right).
 \end{equation}
-Here $A$ is the amplitude of covariance, $l$ is the length scale of
+Here $A>0$ is the amplitude of covariance, $l$ is the length scale of
 exponential decay, and $x_i-x_j$ is the separation between data points.
 The SE kernel function has the advantage of being very simple, with
 just two parameters, $A$ and $l$.
@@ -258,19 +259,22 @@ This kernel is defined as
 \begin{equation}
 \label{eq:QP}
 k_{i,j} = A \exp \left[-\frac{(x_i - x_j)^2}{2l^2} -
-\Gamma^2 \sin^2\left(\frac{2\pi}{P}\right) \right].
+    \Gamma^2 \sin^2\left(\frac{\pi(x_i - x_j)}{P}\right) \right] + \sigma^2
+    \delta_{ij}.
 \end{equation}
 It is the product of the SE kernel function, which describes the overall
 covariance decay, and an exponentiated, squared, sinusoidal kernel function
 that describes the periodic covariance structure.
 $P$ can be interpreted as the rotation period of the star, and $\Gamma$
 controls the amplitude of the $\sin^2$ term.
-If $\Gamma$ is very small, only points almost exactly one period away are
+If $\Gamma$ is very large, only points almost exactly one period away are
 tightly correlated and points that are slightly more or less than one period
 away are very loosely correlated.
-If $\Gamma$ is large, points separated by one period are tightly
+If $\Gamma$ is small, points separated by one period are tightly
 correlated, and points separated by slightly more or less are still highly
 correlated, although less so.
+In other words, large values of $\Gamma$ lead to periodic variations with
+increasingly complex harmonic content.
 This kernel function allows two data points that are separated in time by one
 rotation period to be tightly correlated, while also allowing
 points separated by half a period to be weakly correlated.
@@ -314,8 +318,9 @@ This paper is laid out as follows.
 In \textsection \ref{sec:simulations} we describe the simulated light curves
 used to test the three rotation period recovery methods (ACF, LS periodogram
 and GP).
-The GP method is described in \textsection \ref{sec:method} and the ACF and LS
-periodogram methods are described in \textsection \ref{sec:comparison}.
+The GP method is described in \textsection \ref{sec:method}.
+Its performance is demonstrated and compared with literature methods in
+in \textsection \ref{sec:perf_and_comp}.
 In \textsection \ref{sec:kepler} we apply our method to real \kepler\ data,
 and the results are discussed in \textsection \ref{sec:discussion}.
 
@@ -333,14 +338,14 @@ of the kernel described in Equation \ref{eq:QP}, $\mathcal L$ is the
 QP-GP likelihood function, and $p({\bm \theta})$ is the prior on the
 hyperparameters.  Sampling this posterior presents several challenges:
 \begin{itemize}
-    \item The likelihood evaulation is computationally expensive;
-    \item The GP model is very flexible, sometimes at the expense of 
+    \item The likelihood evaluation is computationally expensive;
+    \item The GP model is very flexible, sometimes at the expense of
     reliable recovery of the period parameter; and
     \item The posterior may often be multimodal.
 \end{itemize}
-This Section discusses how we address these challenges through 
-the implementation details of the likelihood (Section \ref{sec:GP_lhood}), priors 
-(Section \ref{sec:GP_prior}), and sampling method (Section \ref{sec:sampling}). 
+This Section discusses how we address these challenges through
+the implementation details of the likelihood (Section \ref{sec:GP_lhood}), priors
+(Section \ref{sec:GP_prior}), and sampling method (Section \ref{sec:sampling}).
 
 \subsection{Likelihood}
 \label{sec:GP_lhood}
@@ -349,16 +354,16 @@ The GP likelihood is similar to the simple Gaussian likelihood
 function used for optimisation problems where the uncertainties are
 Gaussian and uncorrelated. The latter can be written
 \begin{equation}
-\ln \mathcal{L} = -\frac{1}{2}\sum_{n=1}^N\frac{(y_n-\mu)^2}{\sigma_n^2}
-    - \frac{N}{2}\ln(2\pi\sigma_n^2),
+    \ln \mathcal{L} = -\frac{1}{2}\sum_{n=1}^N\left[\frac{(y_n-\mu)^2}{\sigma_n^2}
+    + \ln(2\pi\sigma_n^2)\right],
 \end{equation}
 \label{eq:chi2}
 where $y_n$ are the data, $\mu$ is the mean model and $\sigma_n$ are the
-Gaussian uncertainites on the data.
+Gaussian uncertainties on the data.
 The equivalent equation in matrix notation is
 \begin{equation}
 \ln \mathcal{L} = -\frac{1}{2}\bf{r}^T\bf{C}^{-1}\bf{r}-\ln|\bf{C}|
-    + \mathrm{constant},
+    + \frac{N}{2}\log2\pi,
 \end{equation}
 \label{eq:lhf1}
 where $\bf{r}$ is the vector of residuals and $\bf{C}$ is the covariance
@@ -384,10 +389,10 @@ Here, the parameters describing the correlated noise are what we are
 interested in and our mean model is simply a straight line at $y=0$.}, as in the
 case of \Kepler\ light curves, those off-diagonal elements are non-zero.
 With GP regression, a covariance matrix generated by the kernel function
-${\bf K}$ replaces ${\bf C}$ in the above equation (for our purposes, the QP 
+${\bf K}$ replaces ${\bf C}$ in the above equation (for our purposes, the QP
 kernel of Equation \ref{eq:QP}).
 
-Evaluating this likeihood for a large number of points can be computationally
+Evaluating this likelihood for a large number of points can be computationally
 expensive.  For example, evaluating
 $\mathcal L$ for an entire \Kepler\ lightcurve
 ($\sim$40,000 points) takes about $\sim$5\,s--- too slow
@@ -401,8 +406,8 @@ $N\ln(N)^2$, where $N$ is the number of data points in the light curve.
 
 We accelerate the likelihood calculation using two complementary strategies:
 subsampling the data and splitting the light curve into independent sections.
-To subsample \Kepler\ data, for example, 
-we randomly select 1/30th of the points 
+To subsample \Kepler\ data, for example,
+we randomly select 1/30th of the points
 in the full light curve (an average of $\sim$1.5 points per day).
 This decreases the likelihood evaluation time by a factor of about 50, down to
 about 100\,ms.
@@ -422,37 +427,35 @@ This method further reduces computation time for a typical light curve
 \subsubsection{Non-period Hyperparameters}
 \label{sec:nonperiod_prior}
 
-The flexibility of this GP model allows for posterior multimodality and 
-``over-fitting''--like behavior. 
+The flexibility of this GP model allows for posterior multimodality and
+``over-fitting''--like behavior.
 For example, if $l$ is small, the non-periodic factor in the covariance
 kernel may dominate, allowing for a good fit to the data without
 requiring any periodic covariance structure---even if clear periodic
 structure is present.
 Additionally, if $\Gamma$ is too large, the GP model becomes extremely
 flexible and can fit the data without varying the period.
-
-Managing this flexibility to focus on reliably
-retrieving the period parameter requires imposing priors 
-on the non-period GP parameters.
-While there are no strictly {\it a priori} reasons to believe
-that any of the hyperparameters should take values in any specific range,
-we have found in this work that reasonable priors for any particular
-dataset can be determined by experimentation.  
-We note this is a somewhat subjective art, with a goal of 
-not allowing the GP to become so flexible that it does not require
-periodicity to fit the data even in the presence of clear periodicity.
-In particular, we find it necessary to avoid large values of 
-$A$ and $\Gamma$, and small values of $l$; though the exact details of what 
-works well may differ among datasets (see \ref{sec:} and 
+Managing this flexibility to reliably retrieve the period parameter requires
+imposing informative priors on the non-period GP parameters.
+% While there are no strictly {\it a priori} reasons to believe
+% that any of the hyperparameters should take values in any specific range,
+% we have found in this work that reasonable priors for any particular
+% dataset can be determined by experimentation.
+% We note this is a somewhat subjective art, with a goal of
+% not allowing the GP to become so flexible that it does not require
+% periodicity to fit the data even in the presence of clear periodicity.
+In particular, we find it necessary to avoid large values of
+$A$ and $\Gamma$, and small values of $l$; though the exact details of what
+works well may differ among datasets (see \ref{sec:} and
 \ref{sec:} for two different examples of hyperparameter priors).
 
 \subsubsection{Period}
 \label{sec:period_prior}
 
 While using an uninformed prior on period (e.g., log-flat) often suffices,
-we also develop a method to construct an informed period prior, based on the 
-autocorrelation function (ACF). 
-The ACF has proven to be very useful for measuring stellar rotation periods 
+we also develop a method to construct an informed period prior, based on the
+autocorrelation function (ACF).
+The ACF has proven to be very useful for measuring stellar rotation periods
 \citep{Mcquillan2012, Mcquillan13b, Mcquillan2014}; however, the
 method has several shortcomings,
 most notably the inability to deliver uncertainties, but also
@@ -472,7 +475,7 @@ but rather we identify several \emph{candidate} periods and define
 a weighting scheme in order to create a non-commital, though useful,
 multimodal prior.  While this procedure does not avoid heuristic choices,
 the fact that its goal is simply to create a \emph{prior} for a
-probabilitistically justified inference scheme rather than
+probabilistically justified inference scheme rather than
 to identify a single correct period softens the potential impact
 of these choices.
 
@@ -593,18 +596,18 @@ though in some cases it can take 12 hours or longer to converge.
 \section{Performance and Comparison to Literature: Simulated Data}
 \label{sec:perf_and_comp}
 
-In order to benchmark this new rotation period recovery method, we apply 
+In order to benchmark this new rotation period recovery method, we apply
 it to a set of simulated light curves
 and compare to the performance of established literature methods.
-Section \ref{sec:simulations} describes the simulated data we use; 
-Section \ref{sec:performance} demonstrates the performance of the 
+Section \ref{sec:simulations} describes the simulated data we use;
+Section \ref{sec:performance} demonstrates the performance of the
 QP-GP method; and Section \ref{sec:comparison} compares to the performance
 of the Lomb-Scargle periodogram and autocorrelation function methods.
 
 \subsection{Simulated light curves}
 \label{sec:simulations}
 
-We take our test data set from the \citet{Aigrain2015} `hare and hounds' 
+We take our test data set from the \citet{Aigrain2015} `hare and hounds'
 rotation period recovery experiment.
 These light curves result from placing dark, circular spots with slowly
 evolving size on the surface of bright, rotating spheres, ignoring
@@ -615,13 +618,13 @@ and the rotational shear (the amplitude of surface differential rotation).
 % Since we are not interested in recovering differential rotation we only used
 % those light curves simulated {\it without} differential rotation, of which
 % there are \naigraincurves.
-However, in this work, in order to focus on demonstrating reliable period recovery, 
-we select only the \naigrain\ light curves without differential rotation, 
-as differential rotation may produce additional scatter in the 
+However, in this work, in order to focus on demonstrating reliable period recovery,
+we select only the \naigrain\ light curves without differential rotation,
+as differential rotation may produce additional scatter in the
 measured rotation periods.
-In future we intend to test to what extent we can recover 
-differential rotation using the GP method and will then use the 
-full set of 1000 light curves.
+% In future we intend to test to what extent we can recover
+% differential rotation using the GP method and will then use the
+% full set of 1000 light curves.
 
 Each of these light curve simulations uses a real \Kepler\ long-cadence time array:
 one data point every thirty minutes over a four year duration.
@@ -630,11 +633,11 @@ log-uniform distribution between 10 and 50 days, and 10\% from a log-uniform
 distribution between 1 and 10 days.
 Figure \ref{fig:period_hist} shows the distribution of solid-body rotation periods.
 The simulations also have a range of stellar inclination
-angles, activity levels, spot lifetimes and more 
+angles, activity levels, spot lifetimes and more
 (see Table \ref{tab:simulation_parameters}).
-In order to preserve \kepler\ noise properties, 
+In order to preserve \kepler\ noise properties,
 \citet{Aigrain2015} add real \kepler\ light curves with no obvious astrophysical
-variability to the theoretical rotational modulated light curves. 
+variability to the theoretical rotational modulated light curves.
 Figure \ref{fig:demo_lc} shows an example of a simulated light curve with a
 period of \aigrainexampleperiod days.
 
@@ -680,16 +683,16 @@ simulated light curves in \citet{Aigrain2015}.}
 \subsection{Method Performance}
 \label{sec:performance}
 
-We apply the QP-GP inference method described in Section \ref{sec:method} 
+We apply the QP-GP inference method described in Section \ref{sec:method}
 to each of these 333 simulated light curves.  As discussed in Section
 \ref{sec:nonperiod_prior}, reliable inference
 requires defining a useful set of priors on the non-period
 hyperparameters.
-For this simulation dataset, we determined these by first running 
-the method using very broad priors on all the non-period parameters 
+For this simulation dataset, we determined these by first running
+the method using very broad priors on all the non-period parameters
 (log-flat between -20 and 20)
-and then inspecting the distribution of their posteriors for those cases 
-that successfully recovered the true period.  
+and then inspecting the distribution of their posteriors for those cases
+that successfully recovered the true period.
 We also experimented with constraining the allowed ranges of the parameters
 after discovering that some regions of parameter space (such as large values
 of $A$ and $\Gamma$ and small values of $l$) tended to allow fits that ignored
@@ -700,10 +703,10 @@ We note that we do not have any specific quantitative justification for the
 use of these priors, except that they produce good results for this particular
 test set of light curves.
 We thus caution that other data sets might have different noise properties,
-potentially requiring modifications to these priors 
+potentially requiring modifications to these priors
 (e.g., see Section \ref{sec:kepler}).
 For the period prior, we tried two different methods: an uninformed (log-flat)
-prior between 0.5\,d and 100\,d, and an ACF-informed prior 
+prior between 0.5\,d and 100\,d, and an ACF-informed prior
 (Section \ref{sec:period_prior}).
 
 Figures \ref{fig:compare_mcmc_acfprior} and \ref{fig:compare_mcmc_noprior}
@@ -794,9 +797,9 @@ The MAD of these results is 0.48 in log-space, \ie\ 1.61 days.
 \subsection{Comparison with literature methods}
 \label{sec:comparison}
 \subsubsection{ACF}
-\label{sec:acf} 
+\label{sec:acf}
 
-We measure an ACF-based period for each light curve, 
+We measure an ACF-based period for each light curve,
 following the method of
 \citet{Mcquillan2013}.
 After calculating the ACF for a light curve, we smooth it by convolving with a
@@ -806,9 +809,9 @@ This is not always the first peak---the second can be larger than the first if
 two active regions are at or near opposite longitudes on the surface of
 the star, producing a light curve with two dips per rotation period.
 We restrict our search to periods less than 100\,d because instrumental
-noise and light-curve systematics significantly distort \kepler\ light 
+noise and light-curve systematics significantly distort \kepler\ light
 curves on longer timescales, rendering longer periods realistically unrecoverable.
-Figure \ref{fig:demo_lc} contains an example ACF of the light curve in 
+Figure \ref{fig:demo_lc} contains an example ACF of the light curve in
 Figure \ref{fig:demo_acf}.
 
 \begin{figure}
@@ -831,10 +834,10 @@ ground-breaking results for stellar and exoplanetary science.
 The method also performed well in the \citet{Aigrain2015}
 recovery experiment,
 producing a large number of accurate rotation period measurements
-(see, e.g., their Figure 8).  
+(see, e.g., their Figure 8).
 Another advantage is its fast implementation speed.
 However, because the ACF method is non-probabilistic, ACF-estimated
-rotation period uncertainties are poorly defined---a clear 
+rotation period uncertainties are poorly defined---a clear
 disadvantage.
 
 We apply the ACF method to the sample of \naigrain\ simulated light
@@ -845,17 +848,17 @@ The MRD of the ACF-recovered periods is \percentacfMAD\ \% (see table
 \ref{tab:MADs} for a side-by-side comparison with the other methods).
 The injected and recovered rotation periods generally agree well,
 though with a few drastic over- or underestimates.
-Additionally, of the points clustered close to the 1:1 line, 
-more fall slightly below than above it, \ie\ 
+Additionally, of the points clustered close to the 1:1 line,
+more fall slightly below than above it, \ie\
 rotation periods are preferentially underestimated.
 This stems from how peak positions in the ACF are measured.
 ACFs of stellar light curves have similar functional forms to the QP kernel
 function in Equation \ref{eq:QP}: periodic functions added to decaying
 exponentials.
-In such functions the peak positions can be shifted towards the left 
+In such functions the peak positions can be shifted towards the left
 (towards shorter periods), because the decaying exponential raises the left side of
 each peak more than the right.
-It is possible to model this effect; however, standard practice 
+It is possible to model this effect; however, standard practice
 simply measures the peak position without taking it into account.
 We adopt this standard practice here to faithfully compare
 our new method to that used in the literature.
@@ -886,11 +889,10 @@ Figure \ref{fig:pgram_compare} shows the resulting recovered rotation periods
 as a function of true period.
 The MRD of the periodogram-recovered periods is \percentpgramMAD\% (see table
 \ref{tab:MADs} for a side-by-side comparison with the other methods).
-This method drastically overestimates many rotation periods, 
+This method drastically overestimates many rotation periods,
 because long-term trends unrelated to rotation can cause excess power
-at long periods---a problem further exacerbated by instrumental noise. 
-\tdmcomment{I don't quite understand this---what do we mean here by 
-``instrumental noise'' as distinct from long-term trends?}
+at long periods.
+% a problem further exacerbated by instrumental noise.
 
 \begin{figure*}
 \begin{center}
@@ -942,7 +944,7 @@ values than the simulations.  We also found that the allowed hyperparameter
 range that we used for the simulations was too large for the KOI population,
 as maybe $\sim$15\% of the fits tended toward corners in the hyperparameter
 space, resulting in poor period measurements.  As a result, after this initial
-test, we subsequently adjusted the priors and re-fit all the KOIs.  
+test, we subsequently adjusted the priors and re-fit all the KOIs.
 The final priors and parameter ranges that we used are in Table \ref{tab:koipriors}.
 
 \begin{table*}
@@ -970,7 +972,7 @@ exceptions, demonstrating that this method works not only on simulated data,
 but also on real data---with the caveat that for any particular data set, some
 care is needed regarding the setting the priors and ranges for the GP
 hyperparameters.
-Notably, below $\ln P$ of about 2.5, the GP method recovers periods 
+Notably, below $\ln P$ of about 2.5, the GP method recovers periods
 systematically slightly larger than \citet{Mcquillan2013}---a likely consequence
 of correcting for the ACF peak measurement bias discussed in Section \ref{sec:acf}.
 
@@ -1004,7 +1006,7 @@ The largest outlier is 114 $\sigma$ away from the true value.
 In the majority of these cases the uncertainties are underestimated due to the
 multi-modal nature of the period posterior PDFs, which makes them difficult to
 sample. \tdmcomment{Is there any evidence of this?  Doesn't sound convincing to me.
-I would think the multi-modality would only be relevant if the posterior is 
+I would think the multi-modality would only be relevant if the posterior is
 closer to the 1/2x or 2x period, but this isn't most of them.}
 The underestimated uncertainties can also be attributed to the model choice.
 Although a GP model is more appropriate than a sinusoid, it is still an
@@ -1208,8 +1210,8 @@ inference currently available.
 
 % acknowledgements
 This research was funded by the Simons Foundation and the Leverhulme Trust.
-TDM is supported by NASA grant NNX14AE11G, and acknowledges the 
-hospitality of the Institute for Advanced Study, 
+TDM is supported by NASA grant NNX14AE11G, and acknowledges the
+hospitality of the Institute for Advanced Study,
 where part of this work was completed.
 Some of the data presented in this paper were obtained from the Mikulski
 Archive for Space Telescopes (MAST).
